# price-optim-ai-

./: .dockerignore  Dockerfile  Dzukou_Pricing_Overview_With_Names - Copy.csv  HOSTING.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: .env.example  README.md  install.sh  main.py  pyproject.toml  requirements.txt  routers.json
backend/app/apis/competitor_scraping/: __init__.py
backend/app/apis/health/: __init__.py
backend/app/apis/price_optimization/: __init__.py
backend/app/libs/: database.py  product_matcher.py
frontend/: .env  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: constants.ts  index.css  user-routes.tsx
frontend/src/brain/: Brain.ts  BrainRoute.ts  data-contracts.ts  index.ts
product_data/: .gitkeep  catalog_categorized.csv  coffee_mugs.csv
product_data/catalog_by_slot/: bottles.csv  lunchbox.csv  notebook.csv  other_scarves_and_shawls.csv  phone_accessories.csv  sunglasses.csv  uncategorized.csv
product_data/catalog_by_term/: coffee_mug.csv  lunch_box.csv  notebook.csv  phone_stand.csv  product_name.csv  shawl.csv  water_bottle.csv  wooden_sunglasses.csv
scripts/: run-backend.ps1  run-frontend.ps1  run.ps1  split_catalog_csv.py
src/: AppWrapper.tsx  main.tsx  router.tsx  user-routes.tsx
src/app/: index.ts
src/brain/: Brain.ts  BrainRoute.ts
src/pages/: CompetitiveAnalysis.tsx  PricingRecommendations.tsx  Scraping.tsx
src/shims/: app-auth.tsx  stackframe-react.tsx
src/utils/: storage.ts
(+8 files in other folders)
