[project]
name = "apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.8",
    "gspread>=6.2.1",
    "openai>=2.1.0",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.0",
]
